tp Grupo 5 - One Page - Prog. Web Inicial TM 2c2023

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    
+
+
     <title>Document</title>
 </head>
 
@@ -34,7 +35,7 @@
         </nav>
 
     </header>
-   
+
 
     <!-- SECCION 1 -->
 
@@ -133,137 +134,186 @@
 
     <!-- SECCION 4 -->
 
-    <section class="seccion4">
-        <div class="contenedorSeccion4">
-            <div class="contenedorEnrique">
-                <div class="enriqueFondo">
-                    <img src="./images/img_5.jpg" alt="enriqueIglesias" class="enrique">
-                </div>
-                <div class="enriqueRedes">
+    <section class="contenedor">
 
-                    <h3 class="enriqueRedesH3">
-                        Enrique Iglesias
-                    </h3>
-                    <p class="enriqueRedesP">
-                        UI/UX Designer
-                    </p>
-                    <div class="enriqueIconos">
-                        <i class="fa-brands fa-facebook"></i>
-                        <i class="fa-brands fa-twitter twEnrique"></i>
-                        <i class="fa-brands fa-google-plus"></i>
+
+        <section class="imgfooter">
+            <div>
+                <img src="./images/img_5.jpg" alt="" class="imgenrique">
+            </div>
+
+            <div class="tituloenrique">
+                <h1 class="titulo">Enrique Iglesias</h1>
+                <h3 class="subtitulo">UI/UX Designer</h3>
+
+                <section class="logos">
+
+
+                    <div class="facebook">
+                        <a href="#"><img src="./images/facebook-icono.svg" alt=""></a>
                     </div>
-                </div>
+                    <div class="twitter">
+                        <a href="#"><img src="./images/square-x-twitter-icono.svg" alt=""></a>
+                    </div>
+                    <div class="google">
+                        <a href="#"><img src="./images/google-plus-icono.svg" alt=""></a>
+                    </div>
+
+                </section>
+
             </div>
 
 
-            <div class="enriqueTexto">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pharetra vestibulum lacus,
-                at rutrum lorem posuere id. In ut nisi quam. In euismod, massa nec dignissim
-                condimentum, libero ante dignissim eros,
-            </div>
-        </div>
+        </section>
 
 
+
+
+    </section>
+    <section class="lorem">
+        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Explicabo quisquam hic deserunt quibusdam natus eum vel ducimus odit nulla magni asperiores,
+            atque laudantium fuga,
+            placeat dignissimos aliquid iusto, corrupti vero!
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit nihil numquam mollitia perspiciatis sapiente
+            dolor eos vero quis, aliquam reiciendis, deleniti voluptate sunt velit inventore. Incidunt eum sed quia
+            voluptas.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id enim, amet laborum sed excepturi eos provident
+            quod tempora perferendis repellat repellendus ratione. Nesciunt minus vero eveniet eum non? Minus,
+            blanditiis!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, sunt accusamus tempore praesentium libero
+            consequatur repellat maxime, eum minima magnam iste ratione qui iure cupiditate doloribus eaque debitis
+            beatae molestias.</p>
     </section>
 
     <!-- SECCION 5  -->
 
-    <section class="seccion5">
+    <div class="container">   <!--ESTE DIV NO ESTABA ORIGINALMENTE EN ESTA SECCION LO AGREGUE YO (GUILLERMO) 
+                                             PARA EL EL FLEX DEL BODY NO AFECTE EL INTERIOR DE LA SECCION-->
+        <section>
+            <div class="seccion-uno">
+                <div>
+                    <h2 class="titulouno">Lorem, ipsum dolor sit amet consectetur adipisicin </h2>
+                    <h3 class="subtitulouno">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet perspiciatis
+                        molestiae voluptatum, error.</h3>
 
-        <div class="contenedorVarios">
+                    <div class="botones-dos">
+                        <div>
+                            <a href="#" class="boton-izq"><i
+                                    class="fa-solid fa-arrow-left-long flecha-izquierda"></i></a>
+                        </div>
 
-            <div class="variosSlider">
-                <h2 class="variosSliderH2">
-                    Lorem ipsum dolor sit amet, consectetur adipiscin
-                </h2>
-                <p class="variosSliderP">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pharetra vestibulum lacus,
-                </p>
-                <div class="btn5">
-                    <a class="prev prevVariosSlider" href="#">
-                        <i class="fa-solid fa-arrow-left-long"></i></a>
-                    <a class="next nextVariosSlider" href="#">
-                        <i class="fa-solid fa-arrow-right-long"></i></a>
+                        <div>
+                            <a href="#" class="boton-der"><i
+                                    class="fa-solid fa-arrow-right-long flecha-derecha"></i></a>
+                        </div>
+                    </div>
+
+
+
                 </div>
             </div>
 
-            <div class="variosArt">
-                <div class="variosArt1">
-                    <div class="variosArt1foto">
-                        <img src="./images/montanas.png" alt="" class="montanas">
-                    </div>
-                    <div class="variosArtTextos">
-                        <h3 class="variosArtH3">
-                            Lorem ipsum dolor sit amet, consectetur adipiscin
-                        </h3>
-                        <p class="variosArtP">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pharetra vestibulum
-                            lacus,
-                        </p>
-                    </div>
+        </section>
+        <section>
+            <div class="seccion-dos">
+
+                <div>
+                    <img src="./images/img_6.jpeg" alt="" class="img6">
+                </div>
+                <div>
+                    <h2 class="titulodos">Lorem, ipsum dolor sit amet consectetur adipisicin </h2>
+                    <h3 class="subtitulodos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet perspiciatis
+                        molestiae voluptatum, error.</h3>
                 </div>
 
-                <div class="variosArt2">
-                    <div class="variosArtfoto">
-                        <img src="./images//montanas2.jpg" alt="" class="montanas">
-                    </div>
-                    <div class="variosArtTextos">
-                        <h3 class="variosArtH3">
-                            Lorem ipsum dolor sit amet, consectetur adipiscin
-                        </h3>
-                        <p class="variosArtP">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pharetra vestibulum
-                            lacus,
-                        </p>
-                    </div>
+                <div>
+                    <img src="./images/img_7.jpg" alt="" class="img7">
                 </div>
+                <div>
+                    <h2 class="titulotres">Lorem, ipsum dolor sit amet consectetur adipisicin </h2>
+                    <h3 class="subtitulotres">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet perspiciatis
+                        molestiae voluptatum, error.</h3>
+                </div>
+
+            </div>
+
+        </section>
+    </div>
+
+    <!-- FOOTER -->
+
+    <section class="pie-de-pagina">
+
+        <div class="load">
+            <img src="./images/parsoLogo.png" alt="">
+        </div>
+        <div>
+            <h2 class="texto-pie-de-pagina">parso.</h2>
+        </div>
+        <div class="columna-dos">
+            <div class="home">
+                <a href="#">Home</a>
+            </div>
+
+            <div class="about">
+                <a href="#">About</a>
+            </div>
+
+            <div class="contact">
+                <a href="#">Contact</a>
+            </div>
+
+        </div>
+
+        <div class="columna-tres">
+
+            <div class="columna-dos">
+                <div class="home">
+                    <a href="#">Blog</a>
+                </div>
+
+                <div class="about">
+                    <a href="#">Careers</a>
+                </div>
+
+                <div class="contact">
+                    <a href="#">Terms Service</a>
+                </div>
+
             </div>
         </div>
+
+        <div class="columna-cuatro">
+            <div>
+                <h2 class="suscribete">Suscribe</h2>
+            </div>
+            <div class="email">
+                <input type="emails" name="#" id="#" class="emails">
+                <label class="ejemplo">example@mail.com</label>
+            </div>
+            <div class="boton-send">
+                <button class="send">SEND</button>
+            </div>
+            <div class="logos-footer">
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+
+            </div>
         </div>
 
     </section>
 
-    <!-- FOOTER -->
+
+
+
+
+
+
+
+
 
     <footer>
-
-        <div class="footerFondo">
-            <div class="contenedorLogoF">
-                <img src="./images/parsoLogo.png" alt="" class="parsoLogoF">
-                <h3 class="logoFH3">
-                    parso.
-                </h3>
-            </div>
-            <div class="footerA">
-                <a href="#" class="footerAn">Home</a>
-                <a href="#" class="footerAn">About</a>
-                <a href="#" class="footerAn">Contact</a>
-
-            </div>
-
-            <div class="footerB">
-                <a href="#" class="footerAn">Blog</a>
-                <a href="#" class="footerAn">Careers</a>
-                <a href="#" class="footerAn">Terms Service</a>
-
-            </div>
-
-            <div class="footerSuscribe">
-                <form action="submit" class="formS">
-                    <label for="email" class="formLabel">Subscribe</label>
-                    <div class="eee">
-                        <input type="email" id="email" name="email" placeholder="example@mail.com" class="mail">
-                        <input type="submit" value="SEND" class="btnSend">
-                    </div>
-                </form>
-                <div>
-                    <i class="fa-brands fa-twitter twFooter"></i>
-                    <i class="fa-brands fa-facebook-f"></i>
-                </div>
-
-            </div>
-
-        </div>
 
     </footer>
 
